Improve variable name