@@ -1,6 +1,6 @@
 package org.jabref.model.entry.event;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.jabref.model.entry.BibEntry;
 
@@ -14,7 +14,7 @@ public class EntryChangedEvent extends EntriesEvent {
      * @param bibEntry where the changes were applied on.
      */
     public EntryChangedEvent(BibEntry bibEntry) {
-        super(Collections.singletonList(bibEntry));
+        super(List.of(bibEntry));
     }
 
     /**
@@ -22,7 +22,7 @@ public class EntryChangedEvent extends EntriesEvent {
      * @param source Source of this event
      */
     public EntryChangedEvent(BibEntry bibEntry, EntriesEventSource source) {
-        super(Collections.singletonList(bibEntry), source);
+        super(List.of(bibEntry), source);
     }
 
     public BibEntry getBibEntry() {
